--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,13 +1,14 @@
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    {{!-- <link rel="stylesheet" href="index.css"> --}}
+    <link rel="stylesheet" href="../../public/css/index.css">
     <script src="https://kit.fontawesome.com/6fce547056.js" crossorigin="anonymous"></script>
-    <style>
+    {{!-- <style>
         * {
     margin: 0;
     padding: 0;
@@ -466,33 +467,12 @@ nav .fas {
     margin-top: -40px;
     display: block;
 }
-    </style>
+    </style> --}}
 </head>
 
 <body>
-    <div id="header">
-        <div class="container">
-
-            <nav>
-                <!-- <img src="images/logo.png" alt="logo" class="logo"> -->
-                <h1 class="logo"><span>Y</span>ash</h1>
-                <ul id="sidemenu">
-                    <li><a href="#header" rel="noopener noreferrer">Home</a>
-                    <li><a href="#about" rel="noopener noreferrer">About</a>
-                    <li><a href="#services" rel="noopener noreferrer">Services</a>
-                    <li><a href="#portfolio" rel="noopener noreferrer">Portfolio</a>
-                    <li><a href="#contact" rel="noopener noreferrer">{{cname}}</a>
-                        <i class="fas fa-times" onclick="closemenu()"></i>
-                </ul>
-                <i class="fas fa-bars" onclick="openmenu()"></i>
-            </nav>
-            <div class="header-text">
-                <p>Open Source Web Developer</p>
-                <h1>Hi, I'm <span>Yash </span><br> Varshney from India</h1>
-            </div>
-        </div>
-
-    </div>
+    
+    {{>header}}
 
 
     <!-- -------About Section---------- -->
