--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="../../public/css/index.css">
+    <link rel="stylesheet" href="/public/images/index.css">
     <script src="https://kit.fontawesome.com/6fce547056.js" crossorigin="anonymous"></script>
     {{!-- <style>
         * {
